--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -125,6 +125,7 @@ allow 144.172.118.55;
 allow 144.172.118.73;
 allow 146.19.143.47;
 allow 146.59.126.232;
+allow 146.70.164.213;
 allow 147.45.116.145;
 allow 147.45.78.34;
 allow 148.113.152.91;
@@ -186,6 +187,7 @@ allow 172.81.132.94;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -507,6 +509,7 @@ allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
+allow 185.31.210.41;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -826,7 +829,6 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
-allow 212.95.50.77;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
@@ -846,9 +848,8 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
-allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -890,6 +891,7 @@ allow 2.56.10.36;
 allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
+allow 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
 allow 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
@@ -1007,7 +1009,7 @@ allow 2620:18c:0:192::173;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
-allow 2a00:16b0:1:243::7012:3117;
+allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
@@ -1107,6 +1109,7 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
+allow 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1138,6 +1141,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1438,6 +1442,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 35.0.127.52;
+allow 35.91.154.39;
 allow 37.114.41.119;
 allow 37.120.239.59;
 allow 37.187.5.192;
@@ -1569,6 +1574,7 @@ allow 5.255.98.23;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
+allow 52.58.29.90;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
@@ -1634,8 +1640,8 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 88.80.20.86;
-allow 88.80.26.2;
 allow 88.80.26.3;
+allow 88.80.26.4;
 allow 89.147.108.228;
 allow 89.147.108.90;
 allow 89.147.110.118;
