--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -125,6 +125,7 @@ deny 144.172.118.55;
 deny 144.172.118.73;
 deny 146.19.143.47;
 deny 146.59.126.232;
+deny 146.70.164.213;
 deny 147.45.116.145;
 deny 147.45.78.34;
 deny 148.113.152.91;
@@ -186,6 +187,7 @@ deny 172.81.132.94;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
+deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -507,6 +509,7 @@ deny 185.247.184.105;
 deny 185.247.184.33;
 deny 185.252.232.218;
 deny 185.254.196.141;
+deny 185.31.210.41;
 deny 185.34.33.2;
 deny 185.35.202.222;
 deny 185.38.175.133;
@@ -826,7 +829,6 @@ deny 212.21.66.6;
 deny 212.38.189.186;
 deny 212.69.167.80;
 deny 212.73.134.204;
-deny 212.95.50.77;
 deny 213.252.140.118;
 deny 213.95.149.22;
 deny 216.239.90.19;
@@ -846,9 +848,8 @@ deny 23.137.253.27;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
-deny 23.154.177.11;
 deny 23.154.177.12;
-deny 23.154.177.13;
+deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -890,6 +891,7 @@ deny 2.56.10.36;
 deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
+deny 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
 deny 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
@@ -1007,7 +1009,7 @@ deny 2620:18c:0:192::173;
 deny 2620:95:4007::111;
 deny 27.255.75.198;
 deny 2800:ba0:6:c1::4858;
-deny 2a00:16b0:1:243::7012:3117;
+deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
@@ -1107,6 +1109,7 @@ deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
+deny 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
@@ -1138,6 +1141,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1438,6 +1442,7 @@ deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.220.75.237;
 deny 35.0.127.52;
+deny 35.91.154.39;
 deny 37.114.41.119;
 deny 37.120.239.59;
 deny 37.187.5.192;
@@ -1569,6 +1574,7 @@ deny 5.255.98.23;
 deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
+deny 52.58.29.90;
 deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
@@ -1634,8 +1640,8 @@ deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
 deny 88.80.20.86;
-deny 88.80.26.2;
 deny 88.80.26.3;
+deny 88.80.26.4;
 deny 89.147.108.228;
 deny 89.147.108.90;
 deny 89.147.110.118;
