--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -263,14 +263,12 @@ allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.132.53.12;
-allow 185.132.53.53;
 allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -848,7 +846,9 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
+allow 23.154.177.11;
 allow 23.154.177.12;
+allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -1009,8 +1009,10 @@ allow 2620:18c:0:192::173;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
+allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1362,7 +1364,6 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1639,7 +1640,9 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.80.20.86;
+allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.147.108.228;
@@ -1689,7 +1692,6 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.116.81;
 allow 94.16.121.91;
-allow 94.177.106.236;
 allow 94.177.106.54;
 allow 94.228.163.25;
 allow 94.230.208.147;
