Update lists at 20241223-2100

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -269,6 +269,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.177.151.34;
@@ -833,6 +834,7 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
+deny 217.64.151.73;
 deny 217.79.189.239;
 deny 23.129.64.171;
 deny 23.129.64.172;
@@ -873,7 +875,6 @@ deny 23.154.177.4;
 deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
-deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.8.104;
@@ -1111,7 +1112,6 @@ deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
-deny 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
@@ -1364,6 +1364,7 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1552,7 +1553,6 @@ deny 51.89.153.112;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1575,7 +1575,6 @@ deny 5.255.98.23;
 deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
-deny 52.58.29.90;
 deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
@@ -1692,6 +1691,7 @@ deny 94.142.241.194;
 deny 94.142.244.16;
 deny 94.16.116.81;
 deny 94.16.121.91;
+deny 94.177.106.236;
 deny 94.177.106.54;
 deny 94.228.163.25;
 deny 94.230.208.147;
