--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -269,6 +269,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -833,6 +834,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.64.151.73;
 allow 217.79.189.239;
 allow 23.129.64.171;
 allow 23.129.64.172;
@@ -873,7 +875,6 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
-allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
@@ -1111,7 +1112,6 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
-allow 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1364,6 +1364,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1552,7 +1553,6 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1575,7 +1575,6 @@ allow 5.255.98.23;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
-allow 52.58.29.90;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
@@ -1692,6 +1691,7 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.116.81;
 allow 94.16.121.91;
+allow 94.177.106.236;
 allow 94.177.106.54;
 allow 94.228.163.25;
 allow 94.230.208.147;
