--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -337,7 +337,6 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
-allow 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -590,6 +589,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
