--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -337,7 +337,6 @@ deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
-deny 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
@@ -590,6 +589,7 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
