--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -614,6 +614,7 @@ deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:5940:c826::2;
+deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:35;
