--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -367,6 +367,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
+allow 2a0b:4142:7ca::2;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
