--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -269,7 +269,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.177.151.34;
@@ -875,7 +874,6 @@ deny 23.154.177.4;
 deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
-deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.8.104;
@@ -1143,6 +1141,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
+deny 2a0b:4142:7ca::2;
 deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
@@ -1690,6 +1689,7 @@ deny 93.99.104.40;
 deny 94.102.51.15;
 deny 94.142.241.194;
 deny 94.142.244.16;
+deny 94.159.104.166;
 deny 94.16.116.81;
 deny 94.16.121.91;
 deny 94.177.106.236;
