--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -175,6 +175,7 @@ allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
 allow 172.104.182.84;
+allow 172.104.186.73;
 allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.233.82.41;
@@ -270,6 +271,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -292,6 +294,7 @@ allow 185.195.71.8;
 allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
+allow 185.219.82.176;
 allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
@@ -847,6 +850,7 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
+allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -879,6 +883,7 @@ allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.94.211.25;
+allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1130,6 +1135,7 @@ allow 2a06:8781::9;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
+allow 2a07:5980:1:742::2;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
@@ -1551,7 +1557,6 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
