--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -111,6 +111,7 @@ set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
 set_real_ip_from 2400:8905::f03c:95ff:fe67:ec03;
 set_real_ip_from 2400:d320:2202:5765::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -356,6 +357,7 @@ set_real_ip_from 2a06:8781::9;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
+set_real_ip_from 2a07:5980:1:742::2;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
