--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -716,6 +716,7 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
+allow 213.181.206.64;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
@@ -763,6 +764,7 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
+allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
@@ -853,6 +855,9 @@ allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.83.21.193;
+allow 45.84.107.182;
+allow 45.84.107.198;
+allow 45.84.107.76;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -982,6 +987,7 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
+allow 89.187.161.189;
 allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
