--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -269,6 +269,7 @@ allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
 allow 2a02:c207:3002:8283::1;
+allow 2a02:c647:0:f00::91b0:1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -563,6 +564,9 @@ allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:bbc7:0:1::254;
+allow 2a0d:bbc7:0:1::320;
+allow 2a0d:bbc7:0:1::394;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
