Update lists at 20241225-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -149,6 +149,7 @@ allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -638,6 +639,7 @@ allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.163.165.127;
+allow 194.26.192.161;
 allow 194.26.192.72;
 allow 194.26.192.77;
 allow 194.26.192.97;
@@ -914,6 +916,7 @@ allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
@@ -1389,6 +1392,7 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
+allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:35;
