--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -149,6 +149,7 @@ deny 160.119.249.240;
 deny 162.210.173.17;
 deny 162.216.18.62;
 deny 162.247.72.192;
+deny 162.247.72.199;
 deny 162.247.74.200;
 deny 162.247.74.201;
 deny 162.247.74.202;
@@ -638,6 +639,7 @@ deny 194.15.113.118;
 deny 194.15.115.212;
 deny 194.163.157.49;
 deny 194.163.165.127;
+deny 194.26.192.161;
 deny 194.26.192.72;
 deny 194.26.192.77;
 deny 194.26.192.97;
@@ -914,6 +916,7 @@ deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
+deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
@@ -1389,6 +1392,7 @@ deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:5940:c826::2;
+deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:35;
