Update lists at 20241225-1501

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -368,7 +368,6 @@ deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:4142:7ca::2;
-deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -665,3 +664,4 @@ deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:a800:2:1:45:80:158:69;
 deny 2a12:d8c0:109a:9001::7;
 deny 2a13:d207:0:461::1;
+deny 2a14:7c2:10ec::1;
