Update lists at 20241226-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -271,6 +271,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -838,7 +839,6 @@ allow 217.64.151.73;
 allow 217.79.189.239;
 allow 23.129.64.171;
 allow 23.129.64.172;
-allow 23.129.64.173;
 allow 23.137.248.100;
 allow 23.137.250.83;
 allow 23.137.253.108;
@@ -1008,7 +1008,6 @@ allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
-allow 2620:18c:0:192::173;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
@@ -1387,6 +1386,7 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:1fc0:1::c758:3168;
+allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
