--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -271,6 +271,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.177.151.34;
@@ -838,7 +839,6 @@ deny 217.64.151.73;
 deny 217.79.189.239;
 deny 23.129.64.171;
 deny 23.129.64.172;
-deny 23.129.64.173;
 deny 23.137.248.100;
 deny 23.137.250.83;
 deny 23.137.253.108;
@@ -1008,7 +1008,6 @@ deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::171;
 deny 2620:18c:0:192::172;
-deny 2620:18c:0:192::173;
 deny 2620:95:4007::111;
 deny 27.255.75.198;
 deny 2800:ba0:6:c1::4858;
@@ -1387,6 +1386,7 @@ deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:1fc0:1::c758:3168;
+deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
