--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -233,7 +233,6 @@ deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::171;
 deny 2620:18c:0:192::172;
-deny 2620:18c:0:192::173;
 deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
@@ -611,6 +610,7 @@ deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:1fc0:1::c758:3168;
+deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
