Update lists at 20241226-0300

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -233,6 +233,7 @@ allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
+allow 2620:18c:0:192::173;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
