--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -323,6 +323,7 @@ allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
