Update lists at 20241228-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -79,6 +79,7 @@ allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
 allow 108.181.124.143;
+allow 108.181.16.251;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
@@ -269,7 +270,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.168.22.85;
 allow 185.170.114.25;
@@ -298,8 +298,10 @@ allow 185.220.100.241;
 allow 185.220.100.242;
 allow 185.220.100.243;
 allow 185.220.100.245;
+allow 185.220.100.247;
 allow 185.220.100.248;
 allow 185.220.100.249;
+allow 185.220.100.250;
 allow 185.220.100.251;
 allow 185.220.100.252;
 allow 185.220.100.253;
@@ -846,6 +848,7 @@ allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
@@ -1150,8 +1153,10 @@ allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
 allow 2a0b:f4c0:16c:5::1;
+allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
+allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1581,6 +1586,7 @@ allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
 allow 5.61.51.143;
+allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1695,7 +1701,6 @@ allow 94.230.208.148;
 allow 94.232.43.221;
 allow 94.72.103.33;
 allow 94.72.98.8;
-allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
