--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -376,8 +376,10 @@ deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
 deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
