--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -376,8 +376,10 @@ set_real_ip_from 2a0b:f4c0:16c:2::1;
 set_real_ip_from 2a0b:f4c0:16c:3::1;
 set_real_ip_from 2a0b:f4c0:16c:4::1;
 set_real_ip_from 2a0b:f4c0:16c:5::1;
+set_real_ip_from 2a0b:f4c0:16c:6::1;
 set_real_ip_from 2a0b:f4c0:16c:7::1;
 set_real_ip_from 2a0b:f4c0:16c:8::1;
+set_real_ip_from 2a0b:f4c0:16c:9::1;
 set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
