Update lists at 20241228-0900

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -270,6 +270,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.168.22.85;
 deny 185.170.114.25;
@@ -297,7 +298,9 @@ deny 185.220.100.240;
 deny 185.220.100.241;
 deny 185.220.100.242;
 deny 185.220.100.243;
+deny 185.220.100.244;
 deny 185.220.100.245;
+deny 185.220.100.246;
 deny 185.220.100.247;
 deny 185.220.100.248;
 deny 185.220.100.249;
@@ -1143,8 +1146,10 @@ deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:4142:7ca::2;
+deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
 deny 2a0b:f4c0:16c:15::1;
