--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -270,6 +270,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.168.22.85;
 allow 185.170.114.25;
@@ -297,7 +298,9 @@ allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
 allow 185.220.100.243;
+allow 185.220.100.244;
 allow 185.220.100.245;
+allow 185.220.100.246;
 allow 185.220.100.247;
 allow 185.220.100.248;
 allow 185.220.100.249;
@@ -1143,8 +1146,10 @@ allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:4142:7ca::2;
+allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
+allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
