--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -270,6 +270,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.22.85;
 set_real_ip_from 185.170.114.25;
@@ -297,7 +298,9 @@ set_real_ip_from 185.220.100.240;
 set_real_ip_from 185.220.100.241;
 set_real_ip_from 185.220.100.242;
 set_real_ip_from 185.220.100.243;
+set_real_ip_from 185.220.100.244;
 set_real_ip_from 185.220.100.245;
+set_real_ip_from 185.220.100.246;
 set_real_ip_from 185.220.100.247;
 set_real_ip_from 185.220.100.248;
 set_real_ip_from 185.220.100.249;
@@ -1143,8 +1146,10 @@ set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:4140:6c6c::2;
 set_real_ip_from 2a0b:4142:7ca::2;
+set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
+set_real_ip_from 2a0b:f4c0:16c:12::1;
 set_real_ip_from 2a0b:f4c0:16c:13::1;
 set_real_ip_from 2a0b:f4c0:16c:14::1;
 set_real_ip_from 2a0b:f4c0:16c:15::1;
