--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -270,6 +270,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.22.85;
 set_real_ip_from 185.170.114.25;
@@ -297,7 +298,9 @@ set_real_ip_from 185.220.100.240;
 set_real_ip_from 185.220.100.241;
 set_real_ip_from 185.220.100.242;
 set_real_ip_from 185.220.100.243;
+set_real_ip_from 185.220.100.244;
 set_real_ip_from 185.220.100.245;
+set_real_ip_from 185.220.100.246;
 set_real_ip_from 185.220.100.247;
 set_real_ip_from 185.220.100.248;
 set_real_ip_from 185.220.100.249;
