--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -270,7 +270,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.168.22.85;
 allow 185.170.114.25;
@@ -641,7 +640,6 @@ allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
-allow 194.26.192.161;
 allow 194.26.192.72;
 allow 194.26.192.77;
 allow 194.26.192.97;
@@ -847,7 +845,6 @@ allow 23.129.64.173;
 allow 23.137.248.100;
 allow 23.137.250.83;
 allow 23.137.253.108;
-allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
@@ -882,6 +879,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.94.211.25;
 allow 2400:8901::f03c:95ff:fe89:4a88;
@@ -906,11 +904,11 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
@@ -1036,7 +1034,6 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1145,7 +1142,6 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
-allow 2a0b:4142:7ca::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1394,7 +1390,6 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
-allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:35;
@@ -1527,6 +1522,7 @@ allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
 allow 45.94.31.68;
+allow 45.95.169.100;
 allow 45.95.169.130;
 allow 45.95.169.223;
 allow 45.95.169.224;
@@ -1537,7 +1533,6 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
@@ -1695,7 +1690,6 @@ allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
-allow 94.159.104.166;
 allow 94.16.116.81;
 allow 94.16.121.91;
 allow 94.177.106.236;
