--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -270,7 +270,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.168.22.85;
 deny 185.170.114.25;
@@ -641,7 +640,6 @@ deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
 deny 194.163.157.49;
-deny 194.26.192.161;
 deny 194.26.192.72;
 deny 194.26.192.77;
 deny 194.26.192.97;
@@ -847,7 +845,6 @@ deny 23.129.64.173;
 deny 23.137.248.100;
 deny 23.137.250.83;
 deny 23.137.253.108;
-deny 23.137.253.110;
 deny 23.137.253.27;
 deny 23.153.248.33;
 deny 23.153.248.34;
@@ -882,6 +879,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
+deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.94.211.25;
 deny 2400:8901::f03c:95ff:fe89:4a88;
@@ -906,11 +904,11 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
-deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::a;
@@ -1036,7 +1034,6 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
@@ -1145,7 +1142,6 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
-deny 2a0b:4142:7ca::2;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1394,7 +1390,6 @@ deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:5940:c826::2;
-deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:35;
@@ -1527,6 +1522,7 @@ deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
 deny 45.94.31.68;
+deny 45.95.169.100;
 deny 45.95.169.130;
 deny 45.95.169.223;
 deny 45.95.169.224;
@@ -1537,7 +1533,6 @@ deny 45.95.169.228;
 deny 45.95.169.229;
 deny 45.95.169.255;
 deny 46.165.243.36;
-deny 46.182.21.248;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 47.243.99.161;
@@ -1695,7 +1690,6 @@ deny 93.99.104.40;
 deny 94.102.51.15;
 deny 94.142.241.194;
 deny 94.142.244.16;
-deny 94.159.104.166;
 deny 94.16.116.81;
 deny 94.16.121.91;
 deny 94.177.106.236;
