Update lists at 20241228-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -193,6 +193,7 @@ allow 176.58.121.177;
 allow 176.97.113.53;
 allow 176.97.114.202;
 allow 177.149.135.191;
+allow 178.162.201.174;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -270,6 +271,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.168.22.85;
 allow 185.170.114.25;
@@ -312,18 +314,7 @@ allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
-allow 185.220.101.100;
-allow 185.220.101.101;
-allow 185.220.101.102;
-allow 185.220.101.103;
-allow 185.220.101.104;
-allow 185.220.101.105;
-allow 185.220.101.106;
-allow 185.220.101.107;
-allow 185.220.101.108;
-allow 185.220.101.109;
 allow 185.220.101.11;
-allow 185.220.101.110;
 allow 185.220.101.12;
 allow 185.220.101.129;
 allow 185.220.101.13;
@@ -471,10 +462,6 @@ allow 185.220.101.88;
 allow 185.220.101.89;
 allow 185.220.101.9;
 allow 185.220.101.90;
-allow 185.220.101.96;
-allow 185.220.101.97;
-allow 185.220.101.98;
-allow 185.220.101.99;
 allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
@@ -640,6 +627,7 @@ allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
+allow 194.26.192.161;
 allow 194.26.192.72;
 allow 194.26.192.77;
 allow 194.26.192.97;
@@ -1026,7 +1014,6 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
-allow 2a01:4f8:1c0c:645f::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1034,6 +1021,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1302,21 +1290,6 @@ allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
-allow 2a0b:f4c2:4::100;
-allow 2a0b:f4c2:4::101;
-allow 2a0b:f4c2:4::102;
-allow 2a0b:f4c2:4::103;
-allow 2a0b:f4c2:4::104;
-allow 2a0b:f4c2:4::105;
-allow 2a0b:f4c2:4::106;
-allow 2a0b:f4c2:4::107;
-allow 2a0b:f4c2:4::108;
-allow 2a0b:f4c2:4::109;
-allow 2a0b:f4c2:4::110;
-allow 2a0b:f4c2:4::96;
-allow 2a0b:f4c2:4::97;
-allow 2a0b:f4c2:4::98;
-allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
@@ -1390,6 +1363,7 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
+allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:35;
@@ -1533,6 +1507,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
@@ -1586,7 +1561,6 @@ allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
 allow 5.61.51.143;
-allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1608,7 +1582,6 @@ allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
-allow 78.47.113.222;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
