--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -193,6 +193,7 @@ deny 176.58.121.177;
 deny 176.97.113.53;
 deny 176.97.114.202;
 deny 177.149.135.191;
+deny 178.162.201.174;
 deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
@@ -270,6 +271,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.168.22.85;
 deny 185.170.114.25;
@@ -312,18 +314,7 @@ deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
-deny 185.220.101.100;
-deny 185.220.101.101;
-deny 185.220.101.102;
-deny 185.220.101.103;
-deny 185.220.101.104;
-deny 185.220.101.105;
-deny 185.220.101.106;
-deny 185.220.101.107;
-deny 185.220.101.108;
-deny 185.220.101.109;
 deny 185.220.101.11;
-deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.129;
 deny 185.220.101.13;
@@ -471,10 +462,6 @@ deny 185.220.101.88;
 deny 185.220.101.89;
 deny 185.220.101.9;
 deny 185.220.101.90;
-deny 185.220.101.96;
-deny 185.220.101.97;
-deny 185.220.101.98;
-deny 185.220.101.99;
 deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
@@ -640,6 +627,7 @@ deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
 deny 194.163.157.49;
+deny 194.26.192.161;
 deny 194.26.192.72;
 deny 194.26.192.77;
 deny 194.26.192.97;
@@ -1026,7 +1014,6 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
-deny 2a01:4f8:1c0c:645f::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1034,6 +1021,7 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
@@ -1302,21 +1290,6 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
-deny 2a0b:f4c2:4::100;
-deny 2a0b:f4c2:4::101;
-deny 2a0b:f4c2:4::102;
-deny 2a0b:f4c2:4::103;
-deny 2a0b:f4c2:4::104;
-deny 2a0b:f4c2:4::105;
-deny 2a0b:f4c2:4::106;
-deny 2a0b:f4c2:4::107;
-deny 2a0b:f4c2:4::108;
-deny 2a0b:f4c2:4::109;
-deny 2a0b:f4c2:4::110;
-deny 2a0b:f4c2:4::96;
-deny 2a0b:f4c2:4::97;
-deny 2a0b:f4c2:4::98;
-deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1390,6 +1363,7 @@ deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:5940:c826::2;
+deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:35;
@@ -1533,6 +1507,7 @@ deny 45.95.169.228;
 deny 45.95.169.229;
 deny 45.95.169.255;
 deny 46.165.243.36;
+deny 46.182.21.248;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 47.243.99.161;
@@ -1586,7 +1561,6 @@ deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
 deny 5.61.51.143;
-deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.84.146;
@@ -1608,7 +1582,6 @@ deny 77.48.28.237;
 deny 77.48.28.239;
 deny 77.81.247.72;
 deny 78.142.18.219;
-deny 78.47.113.222;
 deny 80.210.78.252;
 deny 80.241.60.207;
 deny 80.67.167.81;
