--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -248,7 +248,6 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
-deny 2a01:4f8:1c0c:645f::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -256,6 +255,7 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
@@ -524,21 +524,6 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
-deny 2a0b:f4c2:4::100;
-deny 2a0b:f4c2:4::101;
-deny 2a0b:f4c2:4::102;
-deny 2a0b:f4c2:4::103;
-deny 2a0b:f4c2:4::104;
-deny 2a0b:f4c2:4::105;
-deny 2a0b:f4c2:4::106;
-deny 2a0b:f4c2:4::107;
-deny 2a0b:f4c2:4::108;
-deny 2a0b:f4c2:4::109;
-deny 2a0b:f4c2:4::110;
-deny 2a0b:f4c2:4::96;
-deny 2a0b:f4c2:4::97;
-deny 2a0b:f4c2:4::98;
-deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -612,6 +597,7 @@ deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:5940:c826::2;
+deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:35;
