--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -193,6 +193,7 @@ set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.113.53;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.149.135.191;
+set_real_ip_from 178.162.201.174;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
@@ -270,6 +271,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.22.85;
 set_real_ip_from 185.170.114.25;
@@ -312,18 +314,7 @@ set_real_ip_from 185.220.100.255;
 set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
-set_real_ip_from 185.220.101.100;
-set_real_ip_from 185.220.101.101;
-set_real_ip_from 185.220.101.102;
-set_real_ip_from 185.220.101.103;
-set_real_ip_from 185.220.101.104;
-set_real_ip_from 185.220.101.105;
-set_real_ip_from 185.220.101.106;
-set_real_ip_from 185.220.101.107;
-set_real_ip_from 185.220.101.108;
-set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.11;
-set_real_ip_from 185.220.101.110;
 set_real_ip_from 185.220.101.12;
 set_real_ip_from 185.220.101.129;
 set_real_ip_from 185.220.101.13;
@@ -471,10 +462,6 @@ set_real_ip_from 185.220.101.88;
 set_real_ip_from 185.220.101.89;
 set_real_ip_from 185.220.101.9;
 set_real_ip_from 185.220.101.90;
-set_real_ip_from 185.220.101.96;
-set_real_ip_from 185.220.101.97;
-set_real_ip_from 185.220.101.98;
-set_real_ip_from 185.220.101.99;
 set_real_ip_from 185.220.103.4;
 set_real_ip_from 185.220.103.5;
 set_real_ip_from 185.220.103.6;
@@ -640,6 +627,7 @@ set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.163.157.49;
+set_real_ip_from 194.26.192.161;
 set_real_ip_from 194.26.192.72;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.26.192.97;
@@ -1026,7 +1014,6 @@ set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
-set_real_ip_from 2a01:4f8:1c0c:645f::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -1034,6 +1021,7 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
@@ -1302,21 +1290,6 @@ set_real_ip_from 2a0b:f4c2:3::88;
 set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
-set_real_ip_from 2a0b:f4c2:4::100;
-set_real_ip_from 2a0b:f4c2:4::101;
-set_real_ip_from 2a0b:f4c2:4::102;
-set_real_ip_from 2a0b:f4c2:4::103;
-set_real_ip_from 2a0b:f4c2:4::104;
-set_real_ip_from 2a0b:f4c2:4::105;
-set_real_ip_from 2a0b:f4c2:4::106;
-set_real_ip_from 2a0b:f4c2:4::107;
-set_real_ip_from 2a0b:f4c2:4::108;
-set_real_ip_from 2a0b:f4c2:4::109;
-set_real_ip_from 2a0b:f4c2:4::110;
-set_real_ip_from 2a0b:f4c2:4::96;
-set_real_ip_from 2a0b:f4c2:4::97;
-set_real_ip_from 2a0b:f4c2:4::98;
-set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0b:f4c2::5;
 set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
@@ -1390,6 +1363,7 @@ set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:5940:c826::2;
+set_real_ip_from 2a12:a800:1:1:194:26:192:161;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
 set_real_ip_from 2a12:a800:1:1:2:58:56:35;
@@ -1533,6 +1507,7 @@ set_real_ip_from 45.95.169.228;
 set_real_ip_from 45.95.169.229;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 47.243.99.161;
@@ -1586,7 +1561,6 @@ set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
 set_real_ip_from 5.61.51.143;
-set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
@@ -1608,7 +1582,6 @@ set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
-set_real_ip_from 78.47.113.222;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
