Update lists at 20241229-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -131,8 +131,10 @@ allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
+allow 151.217.62.135;
 allow 15.204.238.148;
 allow 152.53.133.14;
+allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.213.185.133;
 allow 154.213.185.165;
@@ -271,6 +273,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.168.22.85;
 allow 185.170.114.25;
@@ -697,6 +700,7 @@ allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
 allow 2001:67c:2044:1905::26;
+allow 2001:67c:20a1:1561:21f:c6ff:fe9c:3ef2;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -836,6 +840,7 @@ allow 23.137.253.108;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
@@ -1129,6 +1134,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
+allow 2a0b:4142:7ca::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1661,6 +1667,7 @@ allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
+allow 94.159.104.166;
 allow 94.16.116.81;
 allow 94.16.121.91;
 allow 94.177.106.236;
