--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -131,8 +131,10 @@ set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
+set_real_ip_from 151.217.62.135;
 set_real_ip_from 15.204.238.148;
 set_real_ip_from 152.53.133.14;
+set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
@@ -271,6 +273,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.22.85;
 set_real_ip_from 185.170.114.25;
@@ -724,6 +727,7 @@ set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
+set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
@@ -1012,6 +1016,7 @@ set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
+set_real_ip_from 94.159.104.166;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.236;
