--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -25,6 +25,7 @@ deny 2001:620:20d0::23;
 deny 2001:620:20d0::24;
 deny 2001:638:301:f732::150;
 deny 2001:67c:2044:1905::26;
+deny 2001:67c:20a1:1561:21f:c6ff:fe9c:3ef2;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
@@ -364,6 +365,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
+deny 2a0b:4142:7ca::2;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
