Update lists at 20241230-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -36,6 +36,7 @@ allow 104.244.79.61;
 allow 107.172.31.218;
 allow 107.174.138.172;
 allow 107.174.146.25;
+allow 107.175.84.69;
 allow 107.189.10.175;
 allow 107.189.11.111;
 allow 107.189.11.113;
@@ -167,6 +168,7 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
+allow 16.62.226.203;
 allow 166.70.207.2;
 allow 171.25.193.20;
 allow 171.25.193.234;
@@ -190,6 +192,7 @@ allow 172.81.132.94;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -276,7 +279,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.168.22.85;
 allow 185.170.114.25;
@@ -320,7 +322,18 @@ allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
+allow 185.220.101.100;
+allow 185.220.101.101;
+allow 185.220.101.102;
+allow 185.220.101.103;
+allow 185.220.101.104;
+allow 185.220.101.105;
+allow 185.220.101.106;
+allow 185.220.101.107;
+allow 185.220.101.108;
+allow 185.220.101.109;
 allow 185.220.101.11;
+allow 185.220.101.110;
 allow 185.220.101.12;
 allow 185.220.101.129;
 allow 185.220.101.13;
@@ -468,6 +481,10 @@ allow 185.220.101.88;
 allow 185.220.101.89;
 allow 185.220.101.9;
 allow 185.220.101.90;
+allow 185.220.101.96;
+allow 185.220.101.97;
+allow 185.220.101.98;
+allow 185.220.101.99;
 allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
@@ -784,6 +801,7 @@ allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
 allow 2001:b030:2422::7234;
+allow 2001:bc8:1201:55:ca1f:66ff:fec7:eb30;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1085,6 +1103,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1137,6 +1156,7 @@ allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:4142:7ca::2;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1297,6 +1317,21 @@ allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
+allow 2a0b:f4c2:4::100;
+allow 2a0b:f4c2:4::101;
+allow 2a0b:f4c2:4::102;
+allow 2a0b:f4c2:4::103;
+allow 2a0b:f4c2:4::104;
+allow 2a0b:f4c2:4::105;
+allow 2a0b:f4c2:4::106;
+allow 2a0b:f4c2:4::107;
+allow 2a0b:f4c2:4::108;
+allow 2a0b:f4c2:4::109;
+allow 2a0b:f4c2:4::110;
+allow 2a0b:f4c2:4::96;
+allow 2a0b:f4c2:4::97;
+allow 2a0b:f4c2:4::98;
+allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
@@ -1437,6 +1472,8 @@ allow 3.72.85.23;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 43.198.151.77;
+allow 43.198.183.9;
 allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1521,6 +1558,7 @@ allow 47.243.99.161;
 allow 47.76.187.86;
 allow 5.104.86.6;
 allow 51.15.59.15;
+allow 51.159.104.55;
 allow 51.195.166.174;
 allow 51.222.136.218;
 allow 51.222.142.67;
@@ -1534,7 +1572,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
+allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
