--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -36,6 +36,7 @@ deny 104.244.79.61;
 deny 107.172.31.218;
 deny 107.174.138.172;
 deny 107.174.146.25;
+deny 107.175.84.69;
 deny 107.189.10.175;
 deny 107.189.11.111;
 deny 107.189.11.113;
@@ -167,6 +168,7 @@ deny 162.251.5.152;
 deny 163.172.45.102;
 deny 164.132.172.209;
 deny 165.73.242.163;
+deny 16.62.226.203;
 deny 166.70.207.2;
 deny 171.25.193.20;
 deny 171.25.193.234;
@@ -190,6 +192,7 @@ deny 172.81.132.94;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
+deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -276,7 +279,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.168.22.85;
 deny 185.170.114.25;
@@ -320,7 +322,18 @@ deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
+deny 185.220.101.100;
+deny 185.220.101.101;
+deny 185.220.101.102;
+deny 185.220.101.103;
+deny 185.220.101.104;
+deny 185.220.101.105;
+deny 185.220.101.106;
+deny 185.220.101.107;
+deny 185.220.101.108;
+deny 185.220.101.109;
 deny 185.220.101.11;
+deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.129;
 deny 185.220.101.13;
@@ -468,6 +481,10 @@ deny 185.220.101.88;
 deny 185.220.101.89;
 deny 185.220.101.9;
 deny 185.220.101.90;
+deny 185.220.101.96;
+deny 185.220.101.97;
+deny 185.220.101.98;
+deny 185.220.101.99;
 deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
@@ -784,6 +801,7 @@ deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:9e54::b;
 deny 2001:b030:2422::7234;
+deny 2001:bc8:1201:55:ca1f:66ff:fec7:eb30;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1085,6 +1103,7 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -1137,6 +1156,7 @@ deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:4142:7ca::2;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1297,6 +1317,21 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
+deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
+deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::104;
+deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::106;
+deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
+deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::110;
+deny 2a0b:f4c2:4::96;
+deny 2a0b:f4c2:4::97;
+deny 2a0b:f4c2:4::98;
+deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1437,6 +1472,8 @@ deny 3.72.85.23;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
+deny 43.198.151.77;
+deny 43.198.183.9;
 deny 45.11.229.132;
 deny 45.11.59.28;
 deny 45.118.133.44;
@@ -1521,6 +1558,7 @@ deny 47.243.99.161;
 deny 47.76.187.86;
 deny 5.104.86.6;
 deny 51.15.59.15;
+deny 51.159.104.55;
 deny 51.195.166.174;
 deny 51.222.136.218;
 deny 51.222.142.67;
@@ -1534,7 +1572,7 @@ deny 51.89.153.112;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
+deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
