--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -133,7 +133,6 @@ allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
-allow 151.217.62.135;
 allow 15.204.238.148;
 allow 152.53.133.14;
 allow 152.53.53.243;
@@ -169,6 +168,7 @@ allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 16.62.226.203;
+allow 16.62.59.252;
 allow 166.70.207.2;
 allow 171.25.193.20;
 allow 171.25.193.234;
@@ -279,8 +279,8 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
-allow 185.168.22.85;
 allow 185.170.114.25;
 allow 185.177.151.34;
 allow 185.183.157.214;
@@ -323,17 +323,12 @@ allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
 allow 185.220.101.100;
-allow 185.220.101.101;
 allow 185.220.101.102;
 allow 185.220.101.103;
-allow 185.220.101.104;
 allow 185.220.101.105;
-allow 185.220.101.106;
-allow 185.220.101.107;
 allow 185.220.101.108;
 allow 185.220.101.109;
 allow 185.220.101.11;
-allow 185.220.101.110;
 allow 185.220.101.12;
 allow 185.220.101.129;
 allow 185.220.101.13;
@@ -481,8 +476,6 @@ allow 185.220.101.88;
 allow 185.220.101.89;
 allow 185.220.101.9;
 allow 185.220.101.90;
-allow 185.220.101.96;
-allow 185.220.101.97;
 allow 185.220.101.98;
 allow 185.220.101.99;
 allow 185.220.103.4;
@@ -719,7 +712,6 @@ allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
 allow 2001:67c:2044:1905::26;
-allow 2001:67c:20a1:1561:21f:c6ff:fe9c:3ef2;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -860,7 +852,6 @@ allow 23.137.253.108;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
-allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
@@ -1027,6 +1018,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1318,18 +1310,11 @@ allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
-allow 2a0b:f4c2:4::101;
 allow 2a0b:f4c2:4::102;
 allow 2a0b:f4c2:4::103;
-allow 2a0b:f4c2:4::104;
 allow 2a0b:f4c2:4::105;
-allow 2a0b:f4c2:4::106;
-allow 2a0b:f4c2:4::107;
 allow 2a0b:f4c2:4::108;
 allow 2a0b:f4c2:4::109;
-allow 2a0b:f4c2:4::110;
-allow 2a0b:f4c2:4::96;
-allow 2a0b:f4c2:4::97;
 allow 2a0b:f4c2:4::98;
 allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
@@ -1569,6 +1554,8 @@ allow 51.81.254.15;
 allow 51.81.33.188;
 allow 5.181.80.107;
 allow 51.89.153.112;
+allow 51.96.17.174;
+allow 51.96.22.229;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
@@ -1658,6 +1645,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
@@ -1699,7 +1687,6 @@ allow 93.123.12.112;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
-allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
 allow 93.99.104.18;
