--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -25,7 +25,6 @@ deny 2001:620:20d0::23;
 deny 2001:620:20d0::24;
 deny 2001:638:301:f732::150;
 deny 2001:67c:2044:1905::26;
-deny 2001:67c:20a1:1561:21f:c6ff:fe9c:3ef2;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
@@ -239,6 +238,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -530,18 +530,11 @@ deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
-deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
 deny 2a0b:f4c2:4::103;
-deny 2a0b:f4c2:4::104;
 deny 2a0b:f4c2:4::105;
-deny 2a0b:f4c2:4::106;
-deny 2a0b:f4c2:4::107;
 deny 2a0b:f4c2:4::108;
 deny 2a0b:f4c2:4::109;
-deny 2a0b:f4c2:4::110;
-deny 2a0b:f4c2:4::96;
-deny 2a0b:f4c2:4::97;
 deny 2a0b:f4c2:4::98;
 deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
