--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -133,7 +133,6 @@ set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
-set_real_ip_from 151.217.62.135;
 set_real_ip_from 15.204.238.148;
 set_real_ip_from 152.53.133.14;
 set_real_ip_from 152.53.53.243;
@@ -169,6 +168,7 @@ set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 16.62.226.203;
+set_real_ip_from 16.62.59.252;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
@@ -279,8 +279,8 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
-set_real_ip_from 185.168.22.85;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.151.34;
 set_real_ip_from 185.183.157.214;
@@ -323,17 +323,12 @@ set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
 set_real_ip_from 185.220.101.100;
-set_real_ip_from 185.220.101.101;
 set_real_ip_from 185.220.101.102;
 set_real_ip_from 185.220.101.103;
-set_real_ip_from 185.220.101.104;
 set_real_ip_from 185.220.101.105;
-set_real_ip_from 185.220.101.106;
-set_real_ip_from 185.220.101.107;
 set_real_ip_from 185.220.101.108;
 set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.11;
-set_real_ip_from 185.220.101.110;
 set_real_ip_from 185.220.101.12;
 set_real_ip_from 185.220.101.129;
 set_real_ip_from 185.220.101.13;
@@ -481,8 +476,6 @@ set_real_ip_from 185.220.101.88;
 set_real_ip_from 185.220.101.89;
 set_real_ip_from 185.220.101.9;
 set_real_ip_from 185.220.101.90;
-set_real_ip_from 185.220.101.96;
-set_real_ip_from 185.220.101.97;
 set_real_ip_from 185.220.101.98;
 set_real_ip_from 185.220.101.99;
 set_real_ip_from 185.220.103.4;
@@ -719,7 +712,6 @@ set_real_ip_from 2001:620:20d0::23;
 set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:638:301:f732::150;
 set_real_ip_from 2001:67c:2044:1905::26;
-set_real_ip_from 2001:67c:20a1:1561:21f:c6ff:fe9c:3ef2;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
@@ -860,7 +852,6 @@ set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
-set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
@@ -1027,6 +1018,7 @@ set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
+set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1318,18 +1310,11 @@ set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
-set_real_ip_from 2a0b:f4c2:4::101;
 set_real_ip_from 2a0b:f4c2:4::102;
 set_real_ip_from 2a0b:f4c2:4::103;
-set_real_ip_from 2a0b:f4c2:4::104;
 set_real_ip_from 2a0b:f4c2:4::105;
-set_real_ip_from 2a0b:f4c2:4::106;
-set_real_ip_from 2a0b:f4c2:4::107;
 set_real_ip_from 2a0b:f4c2:4::108;
 set_real_ip_from 2a0b:f4c2:4::109;
-set_real_ip_from 2a0b:f4c2:4::110;
-set_real_ip_from 2a0b:f4c2:4::96;
-set_real_ip_from 2a0b:f4c2:4::97;
 set_real_ip_from 2a0b:f4c2:4::98;
 set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0b:f4c2::5;
@@ -1569,6 +1554,8 @@ set_real_ip_from 51.81.254.15;
 set_real_ip_from 51.81.33.188;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.89.153.112;
+set_real_ip_from 51.96.17.174;
+set_real_ip_from 51.96.22.229;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
@@ -1658,6 +1645,7 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
+set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
@@ -1699,7 +1687,6 @@ set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
-set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
 set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.18;
