Update lists at 20250101-0900

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -191,6 +191,7 @@ deny 2605:6400:30:f174:42:42:42:42;
 deny 2605:6400:30:f174:4:3:2:1;
 deny 2605:6400:30:f174:cafe::;
 deny 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
+deny 2605:6400:30:f288:4bcb:b251:e210:97c;
 deny 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 deny 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 deny 2605:6400:30:f414:42ce:c612:dab8:1337;
@@ -339,6 +340,7 @@ deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
+deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 deny 2a06:1280:bee1:2::ee12:230;
