--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -43,6 +43,7 @@ set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.11.113;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.175;
+set_real_ip_from 107.189.1.213;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.88;
 set_real_ip_from 107.189.13.180;
@@ -81,6 +82,7 @@ set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
+set_real_ip_from 108.129.150.103;
 set_real_ip_from 108.181.124.143;
 set_real_ip_from 108.181.16.251;
 set_real_ip_from 108.181.27.205;
@@ -125,6 +127,7 @@ set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.118.73;
 set_real_ip_from 146.19.143.47;
 set_real_ip_from 146.59.126.232;
+set_real_ip_from 146.70.146.26;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
 set_real_ip_from 148.113.152.91;
@@ -139,6 +142,7 @@ set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
 set_real_ip_from 154.213.185.183;
+set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.213.187.66;
@@ -277,6 +281,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.151.34;
@@ -964,6 +969,7 @@ set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
+set_real_ip_from 2605:6400:30:f288:4bcb:b251:e210:97c;
 set_real_ip_from 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
@@ -1113,6 +1119,7 @@ set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
+set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
 set_real_ip_from 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
@@ -1589,7 +1596,6 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.246.231.47;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
 set_real_ip_from 54.36.209.253;
