Update lists at 20250102-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -282,6 +282,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -511,7 +512,6 @@ allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
-allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -877,6 +877,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.184.48.78;
@@ -1038,7 +1039,6 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1109,6 +1109,7 @@ allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1526,7 +1527,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1542,7 +1542,6 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
@@ -1565,6 +1564,7 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1640,6 +1640,7 @@ allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
